--- a/layouts/partials/comments.html
+++ b/layouts/partials/comments.html
@@ -1,5 +1,5 @@
 			<script src="https://utteranc.es/client.js"
-							repo="eddycjy/blog"
+							repo="wuqinqiang/blog"
 							issue-term="pathname"
 							theme="github-light"
 							crossorigin="anonymous"
